profile card overflow fixed

--- a/src/components/sidebar/profile-card/profile-card.style.css
+++ b/src/components/sidebar/profile-card/profile-card.style.css
@@ -34,6 +34,10 @@
 	color: var(--clr-text-primary);
 	cursor: pointer;
 }
+.sidebar-card > .profile-card-title {
+	overflow-x: hidden;
+}
+
 @media (width > 768px) {
 	.avatar {
 		max-width: 24px;
