--- a/src/index.css
+++ b/src/index.css
@@ -244,7 +244,6 @@
 		display: flex;
 		align-items: center;
 		position: relative;
-		overflow-x: hidden;
 	}
 
 	.hidden {
